# Bactowise

./: .gitignore  DOCS.md  README.md  pipeline.yaml  pyproject.toml  run_tests.sh
bactowise/: __init__.py  cli.py  pipeline.py
bactowise/config/: pipeline.yaml
bactowise/consensus/: build_qc_dashboard.py  consensus_engine.py
bactowise/models/: config.py
bactowise/runners/: amrfinderplus_runner.py  base.py  checkm_runner.py  conda_runner.py  consensus_runner.py  docker_runner.py  eggnogmapper_runner.py  factory.py  mefinder_runner.py  pgap_runner.py  phigaro_runner.py  platon_runner.py  singularity_runner.py  spifinder_runner.py
bactowise/utils/: config_loader.py  config_manager.py  console.py  db_manager.py
conda_recipe/: meta.yaml
genoflow/: __init__.py  cli.py  pipeline.py
genoflow/models/: config.py
genoflow/runners/: base.py  conda_runner.py  docker_runner.py  factory.py
genoflow/utils/: config_loader.py
tests/: test_bactowise.py  test_genoflow.py
