# pyproject.toml
#
# This file is NOT for distributing bactowise via pip.
# It exists solely so that "pip install . --no-deps" works during conda build.
# Users install bactowise via conda, not pip.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bactowise"
version = "0.1.0"
requires-python = ">=3.10"

# No dependencies listed here — conda handles all dependencies via meta.yaml.
dependencies = []

[project.scripts]
bactowise = "bactowise.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["bactowise"]
