# pyproject.toml
#
# This file handles both pip and conda installs.
# - conda build: uses meta.yaml for conda-managed deps, pip installs the package itself
# - direct pip install: pip resolves all dependencies listed here

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bactowise"
version = "0.1.0"
requires-python = ">=3.10"

# docker is managed by pip (not conda) to avoid urllib3 conflicts in conda-build
dependencies = [
    "docker>=6.0",
]

[project.scripts]
bactowise = "bactowise.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["bactowise"]
