# pyproject.toml
#
# This file is NOT for distributing bactowise via pip.
# It exists solely so that "pip install . --no-deps" works during conda build.
# Users install bactowise via conda, not pip.
#
# docker-py is intentionally managed here via pip rather than conda.
# conda's solver hits urllib3 version conflicts with docker-py on some
# platforms. Letting pip install it avoids that entirely.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bactowise"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "docker>=6.0",
]

[project.scripts]
bactowise = "bactowise.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["bactowise"]
